smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-missing-namespace.smithy
// Use statement is missing a namespace: smithy.api
$version: "0.1.0"

use shape smithy.api
